test/sema/pointer-equals-on-non-pointer-type.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(int a, int b) {
	// CHECK: [[@LINE+1]]:8: error: both operands to pointer comparison operator must have pointer type
	_ = a !== b;
}
